--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </style>
 </head>
 <body>
-  <h1>🎶 Arduino Air Musical Instrument Demo</h1>
+  <h1>🎶 Arduino Air Musical Instrument </h1>
   <video controls>
     <source src="images_and_videos/arduino_air_musical_instrument.mp4" type="video/mp4">
     お使いのブラウザは動画に対応していません。
